--- a/printer.cfg
+++ b/printer.cfg
@@ -36,7 +36,7 @@ microsteps: 16
 endstop_pin: !P1.28
 position_endstop: -4
 position_min: -4
-position_max: 210
+position_max: 220
 homing_speed: 20
 
 [stepper_z]
@@ -125,16 +125,27 @@ aliases:
 [bltouch]
 sensor_pin: ^P0.10
 control_pin: P2.0
-x_offset: 29
-y_offset: -15
-z_offset: 0.920
+x_offset: 0
+y_offset: -55
+z_offset: 3.540
 
 [bed_mesh]
 speed: 100
 horizontal_move_z: 5
-mesh_min: 29,2
-mesh_max: 210,190
+mesh_min: 5,2
+mesh_max: 210,160
 probe_count: 5,5
+
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+[adxl345]
+cs_pin: rpi:None
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    100,100,20
 
 [virtual_sdcard]
 path: ~/gcode_files
@@ -274,18 +285,18 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.137500, -0.180000, -0.182500, -0.207500, -0.202500
-#*# 	  -0.192500, -0.200000, -0.205000, -0.222500, -0.212500
-#*# 	  -0.207500, -0.230000, -0.215000, -0.205000, -0.182500
-#*# 	  -0.215000, -0.215000, -0.210000, -0.187500, -0.155000
-#*# 	  -0.147500, -0.202500, -0.167500, -0.145000, -0.077500
+#*# 	-0.145000, -0.027500, 0.087500, 0.180000, 0.262500
+#*# 	-0.195000, -0.072500, 0.055000, 0.135000, 0.180000
+#*# 	-0.217500, -0.105000, 0.015000, 0.092500, 0.145000
+#*# 	-0.225000, -0.117500, -0.012500, 0.052500, 0.092500
+#*# 	-0.187500, -0.122500, -0.035000, 0.032500, 0.080000
 #*# tension = 0.2
-#*# min_x = 29.0
+#*# min_x = 5.0
 #*# algo = lagrange
 #*# y_count = 5
 #*# mesh_y_pps = 2
 #*# min_y = 2.0
 #*# x_count = 5
-#*# max_y = 190.0
+#*# max_y = 160.0
 #*# mesh_x_pps = 2
 #*# max_x = 210.0
