update resonances on x-axis

--- a/printer.cfg
+++ b/printer.cfg
@@ -7,7 +7,8 @@ restart_method: command
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 3000
+max_accel: 4000
+max_accel_to_decel: 4000
 max_z_velocity: 10
 max_z_accel: 60
 
@@ -23,7 +24,7 @@ rotation_distance: 40
 microsteps: 16
 endstop_pin: !P1.29
 position_endstop: 0
-position_max: 210
+position_max: 175 #210
 homing_speed: 20
 
 [stepper_y]
@@ -68,6 +69,7 @@ rotation_distance: 7.712
 microsteps: 16
 nozzle_diameter: 0.400
 filament_diameter: 1.750
+pressure_advance: 0.25
 heater_pin: P2.7
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: P0.24
@@ -133,11 +135,23 @@ z_offset: 3.540
 speed: 100
 horizontal_move_z: 5
 mesh_min: 5,2
-mesh_max: 210,160
+mesh_max: 175,160
 probe_count: 5,5
+
+[input_shaper]
+shaper_freq_x: 64.4
+shaper_type_x: mzv
+shaper_freq_y: 44.8
+shaper_type_y: zv
+
 
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
+
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100
 
 [adxl345]
 cs_pin: rpi:None
@@ -285,11 +299,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.145000, -0.027500, 0.087500, 0.180000, 0.262500
-#*# 	-0.195000, -0.072500, 0.055000, 0.135000, 0.180000
-#*# 	-0.217500, -0.105000, 0.015000, 0.092500, 0.145000
-#*# 	-0.225000, -0.117500, -0.012500, 0.052500, 0.092500
-#*# 	-0.187500, -0.122500, -0.035000, 0.032500, 0.080000
+#*# 	  -0.125000, -0.032500, 0.062500, 0.132500, 0.170000
+#*# 	  -0.155000, -0.070000, 0.022500, 0.082500, 0.102500
+#*# 	  -0.177500, -0.102500, -0.010000, 0.045000, 0.072500
+#*# 	  -0.195000, -0.122500, -0.047500, -0.002500, 0.022500
+#*# 	  -0.192500, -0.132500, -0.067500, -0.030000, -0.000000
 #*# tension = 0.2
 #*# min_x = 5.0
 #*# algo = lagrange
@@ -299,4 +313,4 @@ gcode:
 #*# x_count = 5
 #*# max_y = 160.0
 #*# mesh_x_pps = 2
-#*# max_x = 210.0
+#*# max_x = 175.0
