update input_shaper settings

--- a/printer.cfg
+++ b/printer.cfg
@@ -141,8 +141,8 @@ probe_count: 5,5
 [input_shaper]
 shaper_freq_x: 58.2
 shaper_type_x: mzv
-shaper_freq_y: 44.8
-shaper_type_y: zv
+shaper_freq_y: 40.4
+shaper_type_y: mzv
 
 
 [mcu rpi]
