redone bed mesh leveling

--- a/printer.cfg
+++ b/printer.cfg
@@ -87,31 +87,31 @@ max_temp: 130
 uart_pin: P1.10
 run_current: 0.800
 hold_current: 0.500
-stealthchop_threshold: 999999
+#stealthchop_threshold: 999999
 
 [tmc2208 stepper_y]
 uart_pin: P1.9
 run_current: 0.800
 hold_current: 0.500
-stealthchop_threshold: 999999
+#: 999999
 
 [tmc2208 stepper_z]
 uart_pin: P1.8
 run_current: 0.800
 hold_current: 0.500
-stealthchop_threshold: 999999
+#stealthchop_threshold: 999999
 
 [tmc2208 stepper_z1]
 uart_pin: P1.1
 run_current: 0.800
 hold_current: 0.500
-stealthchop_threshold: 999999
+#stealthchop_threshold: 999999
 
 [tmc2208 extruder]
 uart_pin: P1.4
 run_current: 0.800
 hold_current: 0.500
-stealthchop_threshold: 0
+#stealthchop_threshold: 0
 
 [board_pins]
 aliases:
@@ -231,10 +231,10 @@ gcode:
 [gcode_macro G29]
 gcode:
     G28                             # Home the axis
-    M190 S60                        # Heat up the bed
+    #M190 S60                        # Heat up the bed
     BED_MESH_CALIBRATE              # Do the auto calibration
     SAVE_CONFIG                     # Save profile in printer.cfg
-    M190 S0                         # Cool down the bed
+    #M190 S0                         # Cool down the bed
 
 # Start macro before every print
 [gcode_macro START_PRINT]
@@ -298,11 +298,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.125000, -0.032500, 0.062500, 0.132500, 0.170000
-#*# 	-0.155000, -0.070000, 0.022500, 0.082500, 0.102500
-#*# 	-0.177500, -0.102500, -0.010000, 0.045000, 0.072500
-#*# 	-0.195000, -0.122500, -0.047500, -0.002500, 0.022500
-#*# 	-0.192500, -0.132500, -0.067500, -0.030000, -0.000000
+#*# 	  -0.282500, -0.167500, -0.080000, -0.045000, -0.057500
+#*# 	  -0.280000, -0.162500, -0.075000, -0.030000, -0.037500
+#*# 	  -0.262500, -0.170000, -0.080000, -0.035000, -0.012500
+#*# 	  -0.277500, -0.180000, -0.092500, -0.045000, -0.037500
+#*# 	  -0.277500, -0.212500, -0.130000, -0.077500, -0.055000
 #*# tension = 0.2
 #*# min_x = 5.0
 #*# algo = lagrange
