--- a/printer.cfg
+++ b/printer.cfg
@@ -47,7 +47,7 @@ enable_pin: !P0.21
 rotation_distance: 8
 microsteps: 16
 endstop_pin: !P1.27
-position_endstop: 0.0
+position_endstop = 0.170
 position_min: -1
 position_max: 205
 homing_speed: 5
@@ -87,31 +87,31 @@ max_temp: 130
 uart_pin: P1.10
 run_current: 0.800
 hold_current: 0.500
-#stealthchop_threshold: 999999
+stealthchop_threshold: 999999
 
 [tmc2208 stepper_y]
 uart_pin: P1.9
 run_current: 0.800
 hold_current: 0.500
-#: 999999
+stealthchop_threshold: 999999
 
 [tmc2208 stepper_z]
 uart_pin: P1.8
 run_current: 0.800
 hold_current: 0.500
-#stealthchop_threshold: 999999
+stealthchop_threshold: 999999
 
 [tmc2208 stepper_z1]
 uart_pin: P1.1
 run_current: 0.800
 hold_current: 0.500
-#stealthchop_threshold: 999999
+stealthchop_threshold: 999999
 
 [tmc2208 extruder]
 uart_pin: P1.4
 run_current: 0.800
 hold_current: 0.500
-#stealthchop_threshold: 0
+stealthchop_threshold: 999999
 
 [board_pins]
 aliases:
@@ -280,29 +280,49 @@ gcode:
 
     UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=120 # turn off printer after 120 seconds
 
+# PLA extruder 204 C
+# pid_kp = 24.901
+# pid_ki = 1.383
+# pid_kd = 112.053
+
+# PLA bed 54 C
+# pid_kp = 72.419
+# pid_ki = 2.344
+# pid_kd = 559.435
+
+# PETG extruder 232 C
+# pid_kp = 24.667
+# pid_ki = 1.430
+# pid_kd = 106.375
+
+# PETG bed 82 C
+# pid_kp = 74.328
+# pid_ki = 2.848
+# pid_kd = 484.987
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 24.901
-#*# pid_ki = 1.383
-#*# pid_kd = 112.053
+#*# pid_kp = 24.667
+#*# pid_ki = 1.430
+#*# pid_kd = 106.375
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 72.419
-#*# pid_ki = 2.344
-#*# pid_kd = 559.435
+#*# pid_kp = 74.328
+#*# pid_ki = 2.848
+#*# pid_kd = 484.987
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.282500, -0.167500, -0.080000, -0.045000, -0.057500
-#*# 	  -0.280000, -0.162500, -0.075000, -0.030000, -0.037500
-#*# 	  -0.262500, -0.170000, -0.080000, -0.035000, -0.012500
-#*# 	  -0.277500, -0.180000, -0.092500, -0.045000, -0.037500
-#*# 	  -0.277500, -0.212500, -0.130000, -0.077500, -0.055000
+#*# 	-0.282500, -0.167500, -0.080000, -0.045000, -0.057500
+#*# 	-0.280000, -0.162500, -0.075000, -0.030000, -0.037500
+#*# 	-0.262500, -0.170000, -0.080000, -0.035000, -0.012500
+#*# 	-0.277500, -0.180000, -0.092500, -0.045000, -0.037500
+#*# 	-0.277500, -0.212500, -0.130000, -0.077500, -0.055000
 #*# tension = 0.2
 #*# min_x = 5.0
 #*# algo = lagrange
