--- a/printer.cfg
+++ b/printer.cfg
@@ -278,35 +278,35 @@ gcode:
     G1 X0 Y200                      # Deliver print
     M84 X Y E                       # Disable steppers
 
-    UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=120 # turn off printer after 120 seconds
+    UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=600 # turn off printer after 10minutes
 
 # PLA extruder 204 C
-# [extruder]
-# control = pid
-# pid_kp = 24.901
-# pid_ki = 1.383
-# pid_kd = 112.053
-
-# # PLA bed 54 C
-# [heater_bed]
-# control = pid
-# pid_kp = 72.419
-# pid_ki = 2.344
-# pid_kd = 559.435
-
-# PETG extruder 232 C
 [extruder]
 control = pid
-pid_kp = 24.667
-pid_ki = 1.430
-pid_kd = 106.375
+pid_kp = 24.901
+pid_ki = 1.383
+pid_kd = 112.053
 
-# PETG bed 82 C
+# # PLA bed 54 C
 [heater_bed]
 control = pid
-pid_kp = 74.328
-pid_ki = 2.848
-pid_kd = 484.987
+pid_kp = 72.419
+pid_ki = 2.344
+pid_kd = 559.435
+
+# PETG extruder 232 C
+# [extruder]
+# control = pid
+# pid_kp = 24.667
+# pid_ki = 1.430
+# pid_kd = 106.375
+
+# PETG bed 82 C
+# [heater_bed]
+# control = pid
+# pid_kp = 74.328
+# pid_ki = 2.848
+# pid_kd = 484.987
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
