--- a/printer.cfg
+++ b/printer.cfg
@@ -24,7 +24,7 @@ rotation_distance: 40
 microsteps: 16
 endstop_pin: !P1.29
 position_endstop: 0
-position_max: 210 #210
+position_max: 202
 homing_speed: 20
 
 [stepper_y]
@@ -35,7 +35,6 @@ enable_pin: !P2.8
 rotation_distance: 40
 microsteps: 16
 endstop_pin: !P1.28
-# 220mm
 position_endstop: -4
 position_min: -4
 position_max: 216
@@ -315,11 +314,11 @@ pid_kd = 559.435
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.597500, -0.420000, -0.265000, -0.172500, -0.127500
-#*# 	  -0.582500, -0.402500, -0.255000, -0.142500, -0.115000
-#*# 	  -0.550000, -0.392500, -0.242500, -0.140000, -0.085000
-#*# 	  -0.545000, -0.375000, -0.237500, -0.137500, -0.105000
-#*# 	  -0.525000, -0.390000, -0.257500, -0.167500, -0.115000
+#*# 	  -0.575000, -0.395000, -0.240000, -0.145000, -0.105000
+#*# 	  -0.562500, -0.380000, -0.232500, -0.122500, -0.090000
+#*# 	  -0.535000, -0.365000, -0.217500, -0.117500, -0.065000
+#*# 	  -0.527500, -0.352500, -0.210000, -0.115000, -0.080000
+#*# 	  -0.497500, -0.357500, -0.230000, -0.145000, -0.087500
 #*# tension = 0.2
 #*# min_x = 5.0
 #*# algo = lagrange
