--- a/printer.cfg
+++ b/printer.cfg
@@ -231,10 +231,10 @@ gcode:
 [gcode_macro G29]
 gcode:
     G28                             # Home the axis
-    #M190 S60                        # Heat up the bed
+    M190 S60                        # Heat up the bed
     BED_MESH_CALIBRATE              # Do the auto calibration
     SAVE_CONFIG                     # Save profile in printer.cfg
-    #M190 S0                         # Cool down the bed
+    M190 S0                         # Cool down the bed
 
 # Start macro before every print
 [gcode_macro START_PRINT]
