--- a/printer.cfg
+++ b/printer.cfg
@@ -289,10 +289,10 @@ pid_kd = 112.053
 
 # # PLA bed 54 C
 [heater_bed]
-control = pid
-pid_kp = 72.419
-pid_ki = 2.344
-pid_kd = 559.435
+control: pid
+pid_kp: 72.603
+pid_ki: 2.283
+pid_kd: 577.196
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
