--- a/printer.cfg
+++ b/printer.cfg
@@ -137,12 +137,24 @@ mesh_min: 0,2
 mesh_max: 200,161
 probe_count: 5,5
 
+# PLA extruder 204 C / PLA bed 54 C
+[extruder]
+control: pid
+pid_kp: 24.901
+pid_ki: 1.383
+pid_kd: 112.053
+
+[heater_bed]
+control: pid
+pid_kp: 72.603
+pid_ki: 2.283
+pid_kd: 577.196
+
 [input_shaper]
 shaper_freq_x: 58.2
 shaper_type_x: mzv
 shaper_freq_y: 40.4
 shaper_type_y: mzv
-
 
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
@@ -279,20 +291,6 @@ gcode:
     M84 X Y E                       # Disable steppers
 
     UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=600 # turn off printer after 10minutes
-
-# PLA extruder 204 C
-[extruder]
-control = pid
-pid_kp = 24.901
-pid_ki = 1.383
-pid_kd = 112.053
-
-# # PLA bed 54 C
-[heater_bed]
-control: pid
-pid_kp: 72.603
-pid_ki: 2.283
-pid_kd: 577.196
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
