--- a/printer.cfg
+++ b/printer.cfg
@@ -150,11 +150,11 @@ pid_kp: 72.603
 pid_ki: 2.283
 pid_kd: 577.196
 
-[input_shaper]
-shaper_freq_x: 58.2
-shaper_type_x: mzv
-shaper_freq_y: 40.4
-shaper_type_y: mzv
+# [input_shaper]
+# shaper_freq_x: 58.2
+# shaper_type_x: mzv
+# shaper_freq_y: 40.4
+# shaper_type_y: mzv
 
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
