--- a/printer.cfg
+++ b/printer.cfg
@@ -47,7 +47,7 @@ enable_pin: !P0.21
 rotation_distance: 8
 microsteps: 16
 endstop_pin: !P1.27
-position_endstop = 0.170
+position_endstop: 0.170
 position_min: -1
 position_max: 205
 homing_speed: 5
@@ -243,10 +243,10 @@ gcode:
 [gcode_macro G29]
 gcode:
     G28                             # Home the axis
-    M190 S60                        # Heat up the bed
+    # M190 S60                        # Heat up the bed
     BED_MESH_CALIBRATE              # Do the auto calibration
     SAVE_CONFIG                     # Save profile in printer.cfg
-    M190 S0                         # Cool down the bed
+    # M190 S0                         # Cool down the bed
 
 # Start macro before every print
 [gcode_macro START_PRINT]
