--- a/printer.cfg
+++ b/printer.cfg
@@ -128,7 +128,7 @@ sensor_pin: ^P0.10
 control_pin: P2.0
 x_offset: 0
 y_offset: -55
-z_offset: 3.540
+#z_offset: 3.540
 
 [bed_mesh]
 speed: 100
@@ -298,11 +298,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.352500, -0.140000, 0.002500, 0.095000, 0.152500
-#*# 	  -0.352500, -0.130000, 0.007500, 0.075000, 0.102500
-#*# 	  -0.315000, -0.120000, 0.002500, 0.072500, 0.105000
-#*# 	  -0.280000, -0.075000, 0.017500, 0.067500, 0.082500
-#*# 	  -0.200000, -0.055000, 0.025000, 0.075000, 0.097500
+#*# 	-0.352500, -0.140000, 0.002500, 0.095000, 0.152500
+#*# 	-0.352500, -0.130000, 0.007500, 0.075000, 0.102500
+#*# 	-0.315000, -0.120000, 0.002500, 0.072500, 0.105000
+#*# 	-0.280000, -0.075000, 0.017500, 0.067500, 0.082500
+#*# 	-0.200000, -0.055000, 0.025000, 0.075000, 0.097500
 #*# tension = 0.2
 #*# min_x = 0.0
 #*# algo = lagrange
@@ -313,3 +313,6 @@ gcode:
 #*# max_y = 161.0
 #*# mesh_x_pps = 2
 #*# max_x = 200.0
+#*#
+#*# [bltouch]
+#*# z_offset = 3.550
