--- a/printer.cfg
+++ b/printer.cfg
@@ -128,11 +128,11 @@ sensor_pin: ^P0.10
 control_pin: P2.0
 x_offset: 0
 y_offset: -55
-#z_offset: 3.540
+z_offset: 3.550
 
 [bed_mesh]
 speed: 100
-horizontal_move_z: 5
+horizontal_move_z: 10
 mesh_min: 0,2
 mesh_max: 200,161
 probe_count: 5,5
@@ -298,11 +298,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.352500, -0.140000, 0.002500, 0.095000, 0.152500
-#*# 	-0.352500, -0.130000, 0.007500, 0.075000, 0.102500
-#*# 	-0.315000, -0.120000, 0.002500, 0.072500, 0.105000
-#*# 	-0.280000, -0.075000, 0.017500, 0.067500, 0.082500
-#*# 	-0.200000, -0.055000, 0.025000, 0.075000, 0.097500
+#*# 	  -0.117500, 0.105000, 0.205000, 0.212500, 0.145000
+#*# 	  -0.127500, 0.090000, 0.210000, 0.235000, 0.192500
+#*# 	  -0.107500, 0.120000, 0.230000, 0.277500, 0.242500
+#*# 	  -0.122500, 0.110000, 0.222500, 0.262500, 0.245000
+#*# 	  -0.080000, 0.127500, 0.240000, 0.272500, 0.230000
 #*# tension = 0.2
 #*# min_x = 0.0
 #*# algo = lagrange
@@ -313,6 +313,3 @@ gcode:
 #*# max_y = 161.0
 #*# mesh_x_pps = 2
 #*# max_x = 200.0
-#*#
-#*# [bltouch]
-#*# z_offset = 3.550
