--- a/printer.cfg
+++ b/printer.cfg
@@ -136,6 +136,9 @@ horizontal_move_z: 8
 mesh_min: 0,2
 mesh_max: 200,161
 probe_count: 9,9
+mesh_pps: 3,3
+algorithm: bicubic
+bicubic_tension: 0.2
 
 # PLA extruder 204 C / PLA bed 54 C
 [extruder]
