--- a/printer.cfg
+++ b/printer.cfg
@@ -260,7 +260,7 @@ gcode:
     BED_MESH_PROFILE LOAD=default   # Load bed mesh
     G92 E0                          # Reset extruder
     G1 Z10.0 F3000                  # Move Z up
-    M109 206#S{EXTRUDER_TEMP}           # Wait for Extruder temperature
+    M109 S206#S{EXTRUDER_TEMP}           # Wait for Extruder temperature
     PRIME                           # Print prime line
 
 # Print prime line
