--- a/printer.cfg
+++ b/printer.cfg
@@ -7,7 +7,7 @@ restart_method: command
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 4000 # 3500
+max_accel: 2000 #4000 # 3500
 max_accel_to_decel: 1500 # 3500
 max_z_velocity: 10
 max_z_accel: 60
@@ -153,11 +153,11 @@ pid_kp: 72.603
 pid_ki: 2.283
 pid_kd: 577.196
 
-[input_shaper]
-shaper_freq_x: 78.0
-shaper_type_x: 3hump_ei
-shaper_freq_y: 40.8
-shaper_type_y: mzv
+#[input_shaper]
+#shaper_freq_x: 78.0
+#shaper_type_x: 3hump_ei
+#shaper_freq_y: 40.8
+#shaper_type_y: mzv
 
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
