--- a/printer.cfg
+++ b/printer.cfg
@@ -67,7 +67,7 @@ enable_pin: !P2.12
 # step_distance: .002410
 rotation_distance: 7.712
 microsteps: 16
-nozzle_diameter: 0.400
+nozzle_diameter: 0.600
 filament_diameter: 1.750
 pressure_advance: 0.25
 heater_pin: P2.7
@@ -153,11 +153,11 @@ pid_kp: 72.603
 pid_ki: 2.283
 pid_kd: 577.196
 
-#[input_shaper]
-#shaper_freq_x: 78.0
-#shaper_type_x: 3hump_ei
-#shaper_freq_y: 40.8
-#shaper_type_y: mzv
+[input_shaper]
+shaper_freq_x: 78.0
+shaper_type_x: 3hump_ei
+shaper_freq_y: 40.8
+shaper_type_y: mzv
 
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
