--- a/printer.cfg
+++ b/printer.cfg
@@ -37,7 +37,7 @@ microsteps: 16
 endstop_pin: !P1.28
 position_endstop: -4
 position_min: -4
-position_max: 216
+position_max: 216 # 210
 homing_speed: 20
 
 [stepper_z]
