--- a/printer.cfg
+++ b/printer.cfg
@@ -232,7 +232,7 @@ gcode:
     M84 X Y E
 
 # BLTouch Auto-Bed-Mesh-Leveling
-[gcode_macro G29]
+[gcode_macro AUTO_BED_LEVELING]
 gcode:
     G28                             # Home the axis
     # M190 S60                        # Heat up the bed
