--- a/printer.cfg
+++ b/printer.cfg
@@ -282,6 +282,19 @@ gcode:
     G1 X0 Y200                      # Deliver print
     M84 X Y E                       # Disable steppers
 
+
+[gcode_macro ENCLOSE_LIGHT_ON]
+gcode:
+  {action_call_remote_method("set_device_power",
+                             device="enclosure_light",
+                             state="on")}
+
+[gcode_macro ENCLOSE_LIGHT_OFF]
+gcode:
+  {action_call_remote_method("set_device_power",
+                             device="enclosure_light",
+                             state="off")}
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
