--- a/printer.cfg
+++ b/printer.cfg
@@ -167,13 +167,13 @@ sensor_type: temperature_host
 min_temp: 10
 max_temp: 100
 
-[adxl345]
-cs_pin: rpi:None
+#[adxl345]
+#cs_pin: rpi:None
 
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    100,100,20
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#    100,100,20
 
 [virtual_sdcard]
 path: ~/gcode_files
